--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/_ListLayout.cshtml
@@ -5,6 +5,7 @@
     <link href=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/css/bootstrap.min.css") rel="stylesheet" />
     <script src=@Url.Content("~/Areas/Business/Scripts/bootstrap-3.3.7/js/bootstrap.min.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/COMMON.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/PageJson.js")></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
