--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -12,25 +12,26 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHJBXX.js")"></script>
 </head>
 <body>
-<table class="table" style="width: 470px;">
-    <caption>用户注册</caption>
-    <tr>
-        <td><label for="name">用户名：</label></td>
-        <td><input type="text" class="form-control" id="YHM" placeholder="请输入名称"></td>
-    </tr>
-    <tr>
-        <td><label for="name">密&nbsp;&nbsp;&nbsp;&nbsp;码：</label></td>
-        <td><input type="text" class="form-control" id="MM" placeholder="请输入密码"></td>
-    </tr>
-    <tr>
-        <td><label for="name">验证码：</label></td>
-        <td><input type="text" class="form-control" id="YZM" placeholder="请输入验证码"></td>
-    </tr>
-    <tr>
-        <td><input type="button" id="Reg" value="注册" /></td>
-        <td><input type="button" id="Cancel" value="取消" /></td>
-    </tr>
-</table>
-        
+    <div id="divReg">
+        <table class="table" style="width: 470px;">
+            <caption>用户注册</caption>
+            <tr>
+                <td><label for="name">用户名：</label></td>
+                <td><input type="text" class="form-control" id="YHM" column="YHM" placeholder="请输入名称"></td>
+            </tr>
+            <tr>
+                <td><label for="name">密&nbsp;&nbsp;&nbsp;&nbsp;码：</label></td>
+                <td><input type="text" class="form-control" id="MM" column="MM" placeholder=" 请输入密码"></td>
+            </tr>
+            <tr>
+                <td><label for="name">验证码：</label></td>
+                <td><input type="text" class="form-control" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+            </tr>
+            <tr>
+                <td><input type="button" id="Reg" value="注册" /></td>
+                <td><input type="button" id="Cancel" value="取消" /></td>
+            </tr>
+        </table>
+    </div>  
 </body>
 </html>
