--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -14,25 +14,26 @@
 <body>
     <div id="divReg">
         <table class="table" style="width: 470px;">
-            <caption>用户注册</caption>
             <tr>
-                <td><label for="name">用户名：</label></td>
-                <td><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入名称"></td>
+                <td class="headtd"><span class="title">欢迎注册小镇1区</span></td>
             </tr>
             <tr>
-                <td><label for="name">密&nbsp;&nbsp;&nbsp;&nbsp;码：</label></td>
-                <td><input type="password" class="form-control input_text" id="MM" column="MM" placeholder=" 请输入密码"></td>
+                <td><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
             </tr>
             <tr>
-                <td><label for="name">验证码：</label></td>
-                <td>
-                    <input type="text" class="form-control input_yzm" id="YZM" column="YZM" placeholder="请输入验证码">
-                    <img src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" id="img" onclick="f_refreshtype()" />
-                </td>
+                <td><input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码"></td>
             </tr>
             <tr>
-                <td><input type="button" id="Reg" value="注册" /></td>
-                <td><input type="button" id="Cancel" value="取消" /></td>
+                <td><input type="password" class="form-control input_text" id="QRMM" column="QRMM" placeholder="请再次输入登录密码"></td>
+            </tr>
+            <tr>
+                <td><input type="text" class="form-control input_text" id="SJH" column="SJH" placeholder="请输入手机号"></td>
+            </tr>
+            <tr>
+                <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+            </tr>
+            <tr>
+                <td><input type="button" class="btn btn-info input_text" id="Reg" value="同意条款并注册" /></td>
             </tr>
         </table>
     </div>
