--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -13,15 +13,18 @@
 </head>
 <body>
 <div id="divReg">
-    <table class="table" style="width: 470px;">
+    <table class="table" style="width: 600px;">
         <tr>
             <td class="headtd"><span class="title">欢迎注册小镇1区</span></td>
         </tr>
         <tr>
-            <td><input type="text" data-placement="right" title=".5-15个字符 \n\r.请勿包含身份证银行卡等隐私信息,一旦设置成功无法修改" data-toggle="tooltip" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
+            <td style="width:50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
+            <td id="YHMInfo" style="width:50%"></td>
         </tr>
         <tr>
-            <td><input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码"></td>
+            <td>
+                <input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码">
+            </td>
         </tr>
         <tr>
             <td><input type="password" class="form-control input_text" id="QRMM" column="QRMM" placeholder="请再次输入登录密码"></td>
