--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -1,5 +1,5 @@
 ﻿.input_text {
-    width:80%;
+    width:300px;
 }
 
 tr {
@@ -27,4 +27,10 @@ td {
     -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .075)
     box-shadow：inset 0px 1px 1px rgba(0,0,0,0.075)
     color：#999
+}
+
+#YHMInfo {
+    font-family:微软雅黑 !important;
+    vertical-align:middle !important;
+    text-align:left !important;
 }
