--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -29,7 +29,7 @@ td {
     color：#999
 }
 
-#YHMInfo {
+.Info {
     font-family:微软雅黑 !important;
     vertical-align:middle !important;
     text-align:left !important;
