--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -19,15 +19,17 @@
         </tr>
         <tr>
             <td style="width:50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
-            <td id="YHMInfo" style="width:50%"></td>
+            <td class="Info" id="YHMInfo" style="width:50%"></td>
         </tr>
         <tr>
             <td>
                 <input type="password" class="form-control input_text" id="MM" column="MM" placeholder="请输入登录密码">
             </td>
+            <td class="Info" id="MMInfo" style="width:50%"></td>
         </tr>
         <tr>
             <td><input type="password" class="form-control input_text" id="QRMM" column="QRMM" placeholder="请再次输入登录密码"></td>
+            <td class="Info" id="QRMMInfo" style="width:50%"></td>
         </tr>
         <tr>
             <td><input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号"></td>
