--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -15,7 +15,6 @@ td {
 .title {
     font-family: "宋体";
     font-size: 30px;
-    
 }
 
 .form-control {
@@ -33,4 +32,8 @@ td {
     font-family:微软雅黑 !important;
     vertical-align:middle !important;
     text-align:left !important;
+}
+
+.tooltip-inner {
+    max-width:330px !important;
 }
