--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -36,4 +36,11 @@ td {
 
 .tooltip-inner {
     max-width:330px !important;
+    background-color:#fff;
+    border: 1px solid #999;
+    color:#000;
+}
+
+li {
+    list-style-type:none; 
 }
