--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -33,6 +33,7 @@
         </tr>
         <tr>
             <td><input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号"></td>
+            <td class="Info" id="SJInfo" style="width:50%"></td>
         </tr>
         <tr>
             <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
