--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -36,7 +36,14 @@
             <td class="Info" id="SJInfo" style="width:50%"></td>
         </tr>
         <tr>
-            <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+            <td>
+                <div class="wrap">
+                    <div class="box">
+                        <div class="dragEle" id="dragEle"><span>>></span></div>
+                        <div class="tips">拖动滑块到最右边,完成验证</div>
+                    </div>
+                </div>
+            </td>
         </tr>
         <tr>
             <td><input type="button" class="btn btn-info input_text" id="Reg" value="同意条款并注册"/></td>
