--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -44,3 +44,37 @@ td {
 li {
     list-style-type:none; 
 }
+
+
+
+.box {
+    position: relative;
+    width: 300px;
+    height: 34px;
+    border-radius: 4px;
+    background: #ccc;
+    line-height: 30px;
+    overflow: hidden;
+    color: #fff;
+    font-size: 12px;
+    border:1px solid #ccc;
+}
+
+.dragEle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 34px;
+    width: 40px;
+    background: #fff;
+    border-radius: 4px;
+    text-align: center;
+    cursor:move;
+    color:#999;
+    border-right:1px solid #ccc;
+}
+
+.tips {
+    font-size:14px;
+    text-align: center;
+}
