--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -39,6 +39,7 @@
                 <td>
                     <div class="box">
                         <div class="dragEle">>></div>
+                        <div class="dragTip"><div class="dragTipInner">拖动滑块到最右边,完成验证</div></div>
                         <div class="tips">拖动滑块到最右边,完成验证</div>
                     </div>
                 </td>
