--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -3,15 +3,16 @@
 }
 
 #SJ {
-    width: 200px !important;
+    width: 175px !important;
 }
 
 #tdSJ {
     text-align: left !important;
 }
 
-#HQYZM {
+#btnHQYZM {
     vertical-align: top !important;
+    width: 120px !important;
 }
 
 tr {
