--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -34,7 +34,7 @@
             <tr>
                 <td id="tdSJ">
                     <input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
-                    <input type="button" class="btn btn-info" id="HQYZM" value="获取验证码" />
+                    <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
                 </td>
                 <td class="Info" id="SJInfo" style="width: 50%"></td>
             </tr>
