--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <td style="text-align: left">
-                    <input type="checkbox" />
+                    <input id="checkMMSFZDDL" type="checkbox" />
                     <span class="spanZDDD">下次自动登录</span>
                     <a id="aWJMM" href="#">忘记密码</a>
                 </td>
@@ -67,7 +67,7 @@
                 </tr>
                 <tr>
                     <td style="text-align: left">
-                        <input type="checkbox" />
+                        <input id="checkSJSFZDDL" type="checkbox" />
                         <span class="spanZDDD">下次自动登录</span>
                     </td>
                 </tr>
