--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -130,3 +130,20 @@ li {
     font-size: 14px;
     float: right;
 }
+
+.imgstep 
+{
+    width: 30px; 
+    height: 30px;
+    display: block;
+    margin-left: 30%;
+    margin-bottom: 5px;
+}
+
+.divstep {
+    width: 130px; 
+    text-align: center; 
+    height: 30px;
+    float: left;
+    cursor: default;
+}
