--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
@@ -15,7 +15,9 @@
     <div>
         <table class="table" style="width: 300px;">
             <tr>
-                <td class="headtd"><span class="title">欢迎来到小镇1区</span></td>
+                <td class="headtd">
+                    <div></div>
+                </td>
             </tr>
             <tr>
                 <td>
