--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -10,42 +10,83 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ZHMM.js")"></script>
 </head>
 <body>
-    <div id="divReg">
+    <div>
         <table class="table" style="width: 600px;">
             <tr>
                 <td class="headtd">
                     <div style="width: 432px;">
                         <div class="divstep" id="divQRZH">
                             @*<img class="imgstep" style="background: url(@Url.Content("~/Areas/Business/Css/images/one-blue.png")) no-repeat; " />*@
-                            <span style="color: #5bc0de; font-size: 18px; margin-bottom: 5px;">确认账户</span>
-                            <em style="width: 130px; height: 2px; float: left; background: #5bc0de"></em>
+                            <span class="spanstep" id="spanQRZH">确认账户</span>
+                            <em class="emstep" id="emQRZH"></em>
                         </div>
                         <div class="divstep" id="divYZZH">
-                            <span style="color: #cccccc; font-size: 18px; margin-bottom: 5px;">验证账户</span>
-                            <em style="width: 130px; height: 2px; float: left; background: #cccccc"></em>
+                            <span class="spanstep" id="spanYZZH">验证账户</span>
+                            <em class="emstep" id="emYZZH"></em>
                         </div>
                         <div class="divstep" id="divCZMM">
-                            <span style="color: #cccccc; font-size: 18px; margin-bottom: 5px;">重置密码</span>
-                            <em style="width: 130px; height: 2px; float: left;background: #cccccc"></em>
+                            <span class="spanstep" id="spanCZMM">重置密码</span>
+                            <em class="emstep" id="emCZMM"></em>
                         </div>
                     </div>
                 </td>
             </tr>
-            <tr>
-                <td style="width:50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
-                <td class="Info" id="YHMInfo" style="width:50%"></td>
-            </tr>
-            <tr>
-                <td id="tdSJ">
-                    <input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
-                    <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
-                </td>
-                <td class="Info" id="SJInfo" style="width: 50%"></td>
-            </tr>
-            <tr>
-                <td><input type="button" class="btn btn-info input_text" id="Commit" value="下一步" /></td>
-            </tr>
         </table>
+    </div>
+    <div id="myTabContent" class="tab-content">
+        <div id="divFirst" style="display: block">
+            <table class="table" style="width: 600px;">
+                <tr>
+                    <td style="width: 50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="用户名/手机号"></td>
+                    <td class="Info" id="YHMInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="text" style="width: 284px" class="form-control input_text" placeholder="图片验证码">
+                        <img style="height: 34px;vertical-align: top" src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" />
+                    </td>
+                    <td class="Info" id="SJInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="btnFirst" value="下一步" /></td>
+                </tr>
+            </table>
+        </div>
+        <div id="divSecond" style="display: none">
+            <table class="table" style="width: 600px;">
+                <tr>
+                    <td>
+                        <input type="text" class="form-control input_text" style="width: 266px;" placeholder="请输入手机号">
+                        <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码"/>
+                    </td>
+                    <td class="Info" id="SJInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+                    <td class="Info" id="YZMInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="btnSecond" value="下一步"/></td>
+                </tr>
+            </table>
+        </div>
+        <div id="divThird" style="display: none">
+            <table class="table" style="width: 600px;">
+                <tr>
+                    <td>
+                        <input type="text" class="form-control input_text" placeholder="新密码">
+                    </td>
+                    <td class="Info" id="SJInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" class="form-control input_text" placeholder="确认新密码"></td>
+                    <td class="Info" id="YZMInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="btnThird" value="确定" /></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
