--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -42,10 +42,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" style="width: 284px" class="form-control input_text" placeholder="图片验证码">
-                        <img style="height: 34px;vertical-align: top" src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" />
+                        <input id="TXYZM" type="text" style="width: 284px" class="form-control input_text" placeholder="图片验证码">
+                        <img style="height: 34px; vertical-align: top" src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" />
                     </td>
-                    <td class="Info" id="SJInfo" style="width: 50%"></td>
+                    <td class="Info" id="TXYZMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
                     <td><input type="button" class="btn btn-info input_text" id="btnFirst" value="下一步" /></td>
