添加找回密码

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -56,13 +56,13 @@
             <table class="table" style="width: 600px;">
                 <tr>
                     <td>
-                        <input type="text" class="form-control input_text" style="width: 266px;" placeholder="请输入手机号">
+                        <input type="text" id="SJ" class="form-control input_text" style="width: 266px;" placeholder="请输入手机号">
                         <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码"/>
                     </td>
                     <td class="Info" id="SJInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="form-control input_text" id="YZM" column="YZM" placeholder="请输入验证码"></td>
+                    <td><input type="text" class="form-control input_text" id="YZM" placeholder="请输入验证码"></td>
                     <td class="Info" id="YZMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
@@ -74,13 +74,13 @@
             <table class="table" style="width: 600px;">
                 <tr>
                     <td>
-                        <input type="text" class="form-control input_text" placeholder="新密码">
+                        <input type="text" id="MM" class="form-control input_text" placeholder="新密码">
                     </td>
-                    <td class="Info" id="SJInfo" style="width: 50%"></td>
+                    <td class="Info" id="MMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
-                    <td><input type="text" class="form-control input_text" placeholder="确认新密码"></td>
-                    <td class="Info" id="YZMInfo" style="width: 50%"></td>
+                    <td><input type="text" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
+                    <td class="Info" id="QRMMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
                     <td><input type="button" class="btn btn-info input_text" id="btnThird" value="确定" /></td>
