--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHDLXX/YHDLXX.cshtml
@@ -15,15 +15,13 @@
     <div>
         <table class="table" style="width: 300px;">
             <tr>
-                <td class="headtd">
-                    <div></div>
-                </td>
+                <td class="headtd"><span class="title">欢迎来到小镇1区</span></td>
             </tr>
             <tr>
                 <td>
-                    <ul id="myTab" class="nav nav-tabs" style="width: 300px">
-                        <li id="liMMDL" style="width: 150px" class="active"><a href="#username" data-toggle="tab">用户名密码登录</a></li>
-                        <li id="liSJDL" style="width: 150px;"><a href="#cellphone" data-toggle="tab">手机验证码登录</a></li>
+                    <ul id="myTab" class="nav nav-tabs" style="width: 390px">
+                        <li id="liMMDL" style="width: 195px" class="active"><a href="#username" data-toggle="tab">用户名密码登录</a></li>
+                        <li id="liSJDL" style="width: 195px;"><a href="#cellphone" data-toggle="tab">手机验证码登录</a></li>
                     </ul>
                 </td>
             </tr>
@@ -58,7 +56,7 @@
             <table class="table" style="width: 600px;">
                 <tr>
                     <td id="tdSJ">
-                        <input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
+                        <input type="text" style="width: 266px;" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
                         <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
                     </td>
                     <td class="Info" id="SJInfo" style="width: 50%"></td>
