--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <td id="tdSJ">
-                    <input type="text" class="form-control input_text" id="SJ" column="SJ" placeholder="请输入手机号">
+                    <input type="text" class="form-control input_text" style="width: 266px;" id="SJ" column="SJ" placeholder="请输入手机号">
                     <input type="button" class="btn btn-info" id="btnHQYZM" value="获取验证码" />
                 </td>
                 <td class="Info" id="SJInfo" style="width: 50%"></td>
@@ -43,14 +43,14 @@
                 <td class="Info" id="YZMInfo" style="width:50%"></td>
             </tr>
             @*<tr>
-                <td>
-                    <div class="box">
-                        <div class="dragEle">>></div>
-                        <div class="dragTip"><div class="dragTipInner">拖动滑块到最右边,完成验证</div></div>
-                        <div class="tips">拖动滑块到最右边,完成验证</div>
-                    </div>
-                </td>
-            </tr>*@
+                    <td>
+                        <div class="box">
+                            <div class="dragEle">>></div>
+                            <div class="dragTip"><div class="dragTipInner">拖动滑块到最右边,完成验证</div></div>
+                            <div class="tips">拖动滑块到最右边,完成验证</div>
+                        </div>
+                    </td>
+                </tr>*@
             <tr>
                 <td><input type="button" class="btn btn-info input_text" id="Reg" value="同意条款并注册" /></td>
             </tr>
