--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -74,12 +74,12 @@
             <table class="table" style="width: 600px;">
                 <tr>
                     <td>
-                        <input type="text" id="MM" class="form-control input_text" placeholder="新密码">
+                        <input type="password" id="MM" class="form-control input_text" placeholder="新密码">
                     </td>
                     <td class="Info" id="MMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
-                    <td><input type="text" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
+                    <td><input type="password" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
                     <td class="Info" id="QRMMInfo" style="width: 50%"></td>
                 </tr>
                 <tr>
