切换图形验证码

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZHMM/ZHMM.cshtml
@@ -43,7 +43,7 @@
                 <tr>
                     <td>
                         <input id="TXYZM" type="text" style="width: 284px" class="form-control input_text" placeholder="图片验证码">
-                        <img style="height: 34px; vertical-align: top" src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" />
+                        <img id="imgTXYZM" style="height: 34px; vertical-align: top; cursor:pointer" title="看不清？点击图片换一张" src="@Url.Content("~/Areas/Business/Aspx/png.aspx")" />
                     </td>
                     <td class="Info" id="TXYZMInfo" style="width: 50%"></td>
                 </tr>
