--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHJBXX/YHJBXX.cshtml
@@ -15,7 +15,7 @@
     <div id="divReg">
         <table class="table" style="width: 600px;">
             <tr>
-                <td class="headtd"><span class="title">欢迎注册小镇1区</span></td>
+                <td class="headtd"><span class="title">欢迎注册信息小镇</span></td>
             </tr>
             <tr>
                 <td style="width:50%"><input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入用户名"></td>
