--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -153,7 +153,17 @@ li {
 
 .emstep {
     width: 130px; 
-    height: 2px; 
+    height: 2px;
     float: left;
     background: #cccccc;
+}
+
+.liHead {
+    width:130px;
+    color:white;
+    height:40px;
+    font-size:18px;
+    display:inline;
+    margin-left:30px;
+    cursor:pointer;
 }
