--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -11,7 +11,18 @@
     <title></title>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/YHGL.js")"></script>
 </head>
-<body>
-    用户管理主页
+<body style="width:100%;height:100%;">
+    <div id="divHead" style="background-color: #5bc0de; background-image: url('../../Css/images/logo3_small.png'); width: 100%; height: 80px; vertical-align: middle;">
+        <div style="float:left; width:145px; margin-left:133px;">
+            <img style="width:145px;text-align:center;color:white;font-size:25px;float:left" src="@Url.Content("~/Areas/Business/Css/images/logo.png")" />
+            <span style="width:145px;text-align:center;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color:white;font-size:17px;float:left">Infotownlet.com</span>
+        </div>
+        <ul style="width:450px;height:80px;display:block; float:left;margin-left:100px; margin-top:20px; vertical-align:middle">
+            <li class="liHead">个人中心</li>
+            <li class="liHead">账户设置</li>
+            <li class="liHead">我的资金</li>
+        </ul>
+    </div>
+    <div id="divContent" style="width:100%; height:561px"></div>
 </body>
 </html>
