--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -23,6 +23,8 @@
             <li class="liHead">我的资金</li>
         </ul>
     </div>
-    <div id="divContent" style="width:100%; height:561px"></div>
+    <div id="divContent" style="width:100%; height:561px">
+        <div style="height"></div>
+    </div>
 </body>
 </html>
