--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/PageCommon.css
@@ -62,7 +62,7 @@ li {
     overflow: hidden;
     color: #fff;
     font-size: 12px;
-    border:1px solid #cccccc;
+    border: 1px solid #cccccc;
 }
 
 .dragEle {
@@ -72,11 +72,11 @@ li {
     height: 34px;
     width: 40px;
     background: #fff;
-    color:#ccc;
+    color: #ccc;
     border-radius: 4px;
     text-align: center;
-    cursor:move;
-    z-index:99;
+    cursor: move;
+    z-index: 99;
 }
 
 .dragTip {
@@ -86,11 +86,11 @@ li {
     height: 34px;
     width: 40px;
     background: #5bc0de;
-    color:#fff;
+    color: #fff;
     border-radius: 4px;
     text-align: center;
-    overflow:hidden;
-    font-size:14px;
+    overflow: hidden;
+    font-size: 14px;
 }
 
 .dragTipInner {
@@ -99,7 +99,7 @@ li {
 
 .tips {
     text-align: center;
-    font-size:14px;
+    font-size: 14px;
 }
 
 /*.active {
@@ -112,24 +112,23 @@ li {
 }*/
 
 .spanZDDD {
-    vertical-align: top; 
-    margin-left: 1px; 
-    font-size: 14px; 
+    vertical-align: top;
+    margin-left: 1px;
+    font-size: 14px;
     color: #999;
 }
 
 #aWJMM {
-    cursor: pointer; 
-    text-decoration: none; 
+    cursor: pointer;
+    text-decoration: none;
     color: #666;
     vertical-align: top;
     font-size: 14px;
     float: right;
 }
 
-.imgstep 
-{
-    width: 30px; 
+.imgstep {
+    width: 30px;
     height: 30px;
     display: block;
     margin-left: 30%;
@@ -137,33 +136,59 @@ li {
 }
 
 .divstep {
-    width: 130px; 
-    text-align: center; 
+    width: 130px;
+    text-align: center;
     height: 30px;
     float: left;
     cursor: default;
 }
 
 .spanstep {
-    font-size: 18px; 
+    font-size: 18px;
     margin-bottom: 5px;
     line-height: 40px;
     color: #cccccc;
 }
 
+.spanleftfirst {
+    font-size: 18px;
+    margin-bottom: 5px;
+    line-height: 40px;
+    color: #595757;
+    font-weight: bolder;
+    cursor:pointer;
+}
+
+.spanleftsecond {
+    font-size: 15px;
+    margin-bottom: 5px;
+    line-height: 40px;
+    color: #595757;
+    cursor:pointer;
+}
+
 .emstep {
-    width: 130px; 
+    width: 130px;
     height: 2px;
     float: left;
     background: #cccccc;
 }
 
 .liHead {
-    width:130px;
-    color:white;
-    height:40px;
-    font-size:18px;
-    display:inline;
-    margin-left:30px;
-    cursor:pointer;
+    width: 130px;
+    color: white;
+    height: 40px;
+    font-size: 18px;
+    display: inline;
+    margin-left: 30px;
+    cursor: pointer;
+}
+
+.liLeftMenu {
+    width: 130px;
+    text-align: center;
+}
+
+.liRightHead {
+    width:120px;
 }
