--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -4,7 +4,6 @@
 }
 <!DOCTYPE html>
 
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -43,14 +42,8 @@
                 <li class="liLeftMenu"><span class="spanleftsecond" id="spanWDZP">帮助中心</span></li>
             </ul>
         </div>
-        <div id="divRightContent" style="height:100%;width:900px;float:left; margin-left: 10px;">
-            <ul id="myTab" class="nav nav-tabs" style="width: 100%">
-                <li class="active"><a href="#username" data-toggle="tab">最新信息</a></li>
-                <li class="liRightHead"><a href="#cellphone" data-toggle="tab">显示中的信息</a></li>
-                <li class="liRightHead"><a href="#cellphone" data-toggle="tab">审核中的信息</a></li>
-                <li class="liRightHead"><a href="#cellphone" data-toggle="tab">已删除的信息</a></li>
-                <li class="liRightHead"><a href="#cellphone" data-toggle="tab">未显示信息</a></li>
-            </ul>
+        <div id="divRightContent" style="height: 100%; width: 900px; float: left; margin-left: 10px;">
+            <iframe id="iframeright" style="border: none; width: 100%;height: 100%"></iframe>
         </div>
     </div>
 </body>
