--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WDFB/WDFB.cshtml
@@ -9,10 +9,17 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/WDFB.js")"></script>
 </head>
 <body>
     <div>
-    
+        <ul id="myTab" class="nav nav-tabs" style="width: 100%">
+            <li class="active"><a href="#username" data-toggle="tab">最新信息</a></li>
+            <li class="liRightHead"><a href="#cellphone" data-toggle="tab">显示中的信息</a></li>
+            <li class="liRightHead"><a href="#cellphone" data-toggle="tab">审核中的信息</a></li>
+            <li class="liRightHead"><a href="#cellphone" data-toggle="tab">已删除的信息</a></li>
+            <li class="liRightHead"><a href="#cellphone" data-toggle="tab">未显示信息</a></li>
+        </ul>
     </div>
 </body>
 </html>
