--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -11,12 +11,13 @@
     <title></title>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/LBXZ.js")"></script>
 </head>
-<body>
-    <div>
-        <table class="table" style="width: 600px;">
+<body style="width: 100%; height: 100%;">
+<div style="width: 1440px; text-align: center;">
+    <div id="divLBHead" style="margin-left: 18%; margin-top: 20px;">
+        <table class="table" style="width: 100%; text-align: center;">
             <tr>
                 <td class="headtd">
-                    <div style="width: 600px;">
+                    <div style="width: 900px;">
                         <div class="divstep" id="divXZDL">
                             <span class="spanstep" id="spanXZDL">选择大类</span>
                             <em class="emstep" id="emXZDL"></em>
@@ -34,39 +35,38 @@
             </tr>
         </table>
     </div>
-<div id="myTabContent" class="tab-content">
-    <div id="divDL" class="divLB" style="display: block;">
-        <div style="background-color: #5bc0de; color: white; float: left; height: 28px; width: 180px; ">选择大类</div>
-        <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
-    </div>
-    <div id="divFirst" style="display: block; width: 600px;">
-        <table id="tableDL" class="table" style="width: 600px;">
-        </table>
-    </div>
-    <div id="divXL" class="divLB" style="display: none;">
-        <div style="background-color: #5bc0de; color: white; float: left; height: 28px; width: 180px; ">选择小类</div>
-        <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")" />
-    </div>
-    <div id="divSecond" style="display: block; width: 600px;">
-        <table id="tableXL" class="table" style="width: 600px;">
-        </table>
-    </div>
-    <div id="divThird" style="display: none">
-        <table class="table" style="width: 600px;">
-            <tr>
-                <td>
-                    <input type="password" id="MM" class="form-control input_text" placeholder="新密码">
-                </td>
-                <td class="Info" id="MMInfo" style="width: 50%"></td>
-            </tr>
-            <tr>
-                <td><input type="password" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
-                <td class="Info" id="QRMMInfo" style="width: 50%"></td>
-            </tr>
-            <tr>
-                <td><input type="button" class="btn btn-info input_text" id="btnThird" value="确定"/></td>
-            </tr>
-        </table>
+    <div id="myTabContent" style="margin-left: 18%;">
+        <div id="divDL" class="divLB" style="display: block;">
+            <div class="DLText">选择大类</div>
+            <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
+        </div>
+        <div id="divFirst" style="display: block; width: 900px;">
+            <table id="tableDL" class="table" style="width: 900px;"></table>
+        </div>
+        <div id="divXL" class="divLB" style="display: none;">
+            <div id="divXLText" class="DLText">选择小类</div>
+            <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
+        </div>
+        <div id="divSecond" style="display: block; width: 900px;">
+            <table id="tableXL" class="table" style="width: 900px;"></table>
+        </div>
+        <div id="divThird" style="display: none">
+            <table class="table" style="width: 900px;">
+                <tr>
+                    <td>
+                        <input type="password" id="MM" class="form-control input_text" placeholder="新密码">
+                    </td>
+                    <td class="Info" id="MMInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="password" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
+                    <td class="Info" id="QRMMInfo" style="width: 50%"></td>
+                </tr>
+                <tr>
+                    <td><input type="button" class="btn btn-info input_text" id="btnThird" value="确定"/></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 </body>
