--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -36,18 +36,18 @@
         </table>
     </div>
     <div id="myTabContent" style="margin-left: 18%;">
-        <div id="divDL" class="divLB" style="display: block;">
-            <div class="DLText">选择大类</div>
+        <div id="divDL" class="divLB" style="display: block; ">
+            <div id="divDLText" class="DLText">选择大类</div>
             <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
         </div>
-        <div id="divFirst" style="display: block; width: 900px;">
+        <div id="divFirst" style="display: block; width: 900px; padding-top: 50px;">
             <table id="tableDL" class="table" style="width: 900px;"></table>
         </div>
-        <div id="divXL" class="divLB" style="display: none;">
+        <div id="divXL" class="divLB" style="display: none; ">
             <div id="divXLText" class="DLText">选择小类</div>
             <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
         </div>
-        <div id="divSecond" style="display: block; width: 900px;">
+        <div id="divSecond" style="display: block; width: 900px; padding-top: 50px; ">
             <table id="tableXL" class="table" style="width: 900px;"></table>
         </div>
         <div id="divThird" style="display: none">
